; ModuleID = '/home/carl/AnghaBench/git/extr_submodule-config.c_fetch_config_from_gitmodules.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule-config.c_fetch_config_from_gitmodules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetch_config = type { i32*, i32* }

@gitmodules_fetch_config = common dso_local global i32 0, align 4
@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fetch_config_from_gitmodules(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.fetch_config, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds %struct.fetch_config, %struct.fetch_config* %5, i32 0, i32 0
  %7 = load i32*, i32** %3, align 8
  store i32* %7, i32** %6, align 8
  %8 = getelementptr inbounds %struct.fetch_config, %struct.fetch_config* %5, i32 0, i32 1
  %9 = load i32*, i32** %4, align 8
  store i32* %9, i32** %8, align 8
  %10 = load i32, i32* @gitmodules_fetch_config, align 4
  %11 = load i32, i32* @the_repository, align 4
  %12 = call i32 @config_from_gitmodules(i32 %10, i32 %11, %struct.fetch_config* %5)
  ret void
}

declare dso_local i32 @config_from_gitmodules(i32, i32, %struct.fetch_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
